src/test/deca/context/valid/float_from_int.deca

// Description :
// Arithmétique mixte int/float : int converti en float si nécessaire
//
// Resultats :
// ok
//
{
  float f;
  f = 1 + 2.5;
  println(f);
}
