src/test/deca/context/invalid/methde_sans_return.deca
// Description :
// Methode int avec return oublié ...
//
// Resultats :
// Echec
class MiTemps {
    int duree(int x) {
        x = x + 45;
    }
}
{
}
